--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@vercel/analytics": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "8.0.0-rc21",
+    "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
