--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,12 @@
 schema: https://gql.hashnode.com
 documents: "./src/**/hashnode/**/*.graphql"
 generates:
-  ./src/hashnode/schema.graphql:
+  ./src/server/hashnode/generated/schema.graphql:
     plugins:
       - schema-ast
     config:
       includeDirectives: true
-  ./src/hashnode/graphql.ts:
+  ./src/server/hashnode/generated/graphql.ts:
     plugins:
       - typescript
       - typescript-operations
