--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
