Add subtitle, SEO, and publication fields to Post fragment
Add js-cookie and uuid dependencies

Update package.json and pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "8.0.0-rc21",
     "graphql-request": "^6.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -60,6 +61,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
@@ -68,9 +70,11 @@
     "@graphql-codegen/typed-document-node": "^5.0.1",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
