--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "remark-gfm": "^4.0.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "vaul": "^0.8.9",
@@ -89,6 +88,8 @@
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animation-delay": "^1.2.0",
     "typescript": "^5"
   }
 }
