--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^1.0.10",
     "react-tweet": "^3.2.0",
+    "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
